[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/buttons/settings.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/upheavtt_24.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/hud/options_scrn/Options.gd" type="Script" id=3]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[sub_resource type="GDScript" id=2]
script/source = "extends AcceptDialog


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.33484
margin_right = 1.33484
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="."]
margin_left = 14.0
margin_top = 14.0
margin_right = 56.0
margin_bottom = 56.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsPopup" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -258.5
margin_right = 250.0
margin_bottom = 258.5
rect_min_size = Vector2( 400, 400 )
theme = SubResource( 1 )
window_title = "Options Menu"
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -242.0
margin_top = 8.0
margin_right = 242.0
margin_bottom = 473.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreen" type="HBoxContainer" parent="OptionsPopup/VBoxContainer"]
margin_right = 484.0
margin_bottom = 40.0
alignment = 1

[node name="FullScreenLabel" type="Label" parent="OptionsPopup/VBoxContainer/FullScreen"]
margin_left = 86.0
margin_top = 9.0
margin_right = 317.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "Toggle Fullscreen"
align = 1

[node name="FullScreenToggle" type="CheckButton" parent="OptionsPopup/VBoxContainer/FullScreen"]
margin_left = 321.0
margin_right = 397.0
margin_bottom = 40.0

[node name="MasterVolume" type="HBoxContainer" parent="OptionsPopup/VBoxContainer"]
margin_top = 45.0
margin_right = 484.0
margin_bottom = 85.0
custom_constants/separation = 20

[node name="MasterLabel" type="Label" parent="OptionsPopup/VBoxContainer/MasterVolume"]
margin_top = 9.0
margin_right = 181.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "Master Volume"
align = 1

[node name="MasterVolSlider" type="HSlider" parent="OptionsPopup/VBoxContainer/MasterVolume"]
margin_left = 201.0
margin_right = 351.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
min_value = -50.0
max_value = 50.0

[node name="MasterMute" type="CheckButton" parent="OptionsPopup/VBoxContainer/MasterVolume"]
margin_left = 371.0
margin_right = 447.0
margin_bottom = 40.0
pressed = true

[node name="MusicVolume" type="HBoxContainer" parent="OptionsPopup/VBoxContainer"]
margin_top = 90.0
margin_right = 484.0
margin_bottom = 130.0
custom_constants/separation = 30

[node name="MusicLabel" type="Label" parent="OptionsPopup/VBoxContainer/MusicVolume"]
margin_top = 9.0
margin_right = 167.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "Music Volume"
align = 1

[node name="MusicVolSlider" type="HSlider" parent="OptionsPopup/VBoxContainer/MusicVolume"]
margin_left = 197.0
margin_right = 347.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
min_value = -50.0
max_value = 50.0

[node name="MusicMute" type="CheckButton" parent="OptionsPopup/VBoxContainer/MusicVolume"]
margin_left = 377.0
margin_right = 453.0
margin_bottom = 40.0
pressed = true

[node name="SFXVolume" type="HBoxContainer" parent="OptionsPopup/VBoxContainer"]
margin_top = 135.0
margin_right = 484.0
margin_bottom = 175.0
custom_constants/separation = 60

[node name="SFXLabel" type="Label" parent="OptionsPopup/VBoxContainer/SFXVolume"]
margin_top = 9.0
margin_right = 137.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "SFX Volume"
align = 1

[node name="SFXVolSlider" type="HSlider" parent="OptionsPopup/VBoxContainer/SFXVolume"]
margin_left = 197.0
margin_right = 347.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
min_value = -50.0
max_value = 50.0

[node name="SFXMute" type="CheckButton" parent="OptionsPopup/VBoxContainer/SFXVolume"]
margin_left = 407.0
margin_right = 483.0
margin_bottom = 40.0
pressed = true

[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="OptionsPopup/VBoxContainer/FullScreen/FullScreenToggle" to="." method="_on_FullScreenToggle_pressed"]
[connection signal="value_changed" from="OptionsPopup/VBoxContainer/MasterVolume/MasterVolSlider" to="." method="_on_MasterVolSlider_value_changed"]
[connection signal="toggled" from="OptionsPopup/VBoxContainer/MasterVolume/MasterMute" to="." method="_on_MasterMute_toggled"]
[connection signal="value_changed" from="OptionsPopup/VBoxContainer/MusicVolume/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="toggled" from="OptionsPopup/VBoxContainer/MusicVolume/MusicMute" to="." method="_on_MusicMute_toggled"]
[connection signal="value_changed" from="OptionsPopup/VBoxContainer/SFXVolume/SFXVolSlider" to="." method="_on_SFXVolSlider_value_changed"]
[connection signal="toggled" from="OptionsPopup/VBoxContainer/SFXVolume/SFXMute" to="." method="_on_SFXMute_toggled"]
